# Test-Task

./: CMakeLists.txt  README.md  Test task.rar
Program_1/: CMakeLists.txt  Program_1.cpp
Program_2/: CMakeLists.txt  Program_2.cpp
